# motrix-ai

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  AUDIT-REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY.md  QA-FINAL-VERIFICATION.md  QA-REPORT-INDEPENDENT.md  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/: DISCUSSION_TEMPLATE.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: progress.md  task-1-report-c1.md
apps/gui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/gui/src/: App.vue  main.ts
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/capabilities/: default.json
apps/gui/src-tauri/src/: commands.rs  error.rs  history.rs  lib.rs  tray.rs
apps/gui/src-tauri/src/commands/: aria2.rs  config.rs  fs.rs  http_api.rs  intent.rs  mod.rs  protocol.rs  search.rs
apps/gui/src-tauri/src/services/: mod.rs  port_guard.rs  power.rs  tracker.rs
coverage/: clover.xml  coverage-final.json  index.html
coverage/src/: errors.ts.html  index.html  index.ts.html  logger.ts.html  types.ts.html
coverage/src/ai/: index.html  intent-parser.ts.html  keyword-generator.ts.html  result-evaluator.ts.html
coverage/src/archive/: index.html  sync.ts.html
coverage/src/aria2/: client.ts.html  index.html
coverage/src/config/: index.html  loader.ts.html  schema.ts.html
coverage/src/file/: index.html  organizer.ts.html  renamer.ts.html  templates.ts.html
coverage/src/pipeline/: index.html  post-processor.ts.html
coverage/src/queue/: database.ts.html  index.html  manager.ts.html
coverage/src/scheduler/: disk-based.ts.html  (+3 more)
docs/: ARCHITECTURE.md  GUI-REWRITE-PLAN.md  PRD.md  PRE-PUSH-CHECKLIST.md  SPRINT-5-REFACTOR-PLAN.md  design-preview.html  design-review.md  interaction-audit.md
docs/design/: prototype.html
docs/features/: 01-type-unification.md  02-complete-i18n.md  03-split-components.md  04-icon-standardization.md  05-platform-capabilities.md  06-search-robustness.md  07-sftp-metalink.md  08-i18n-plural-interpolation.md  README.md
extensions/browser/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
scripts/: bump-version.mjs  release.sh
(+116 files in other folders)
