[package]
name = "app"
version = "1.5.4"
description = "Motrix AI - AI-native download manager"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.80.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"

# HTTP client for search proxy
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

# For subtitle parsing
regex = "1"
urlencoding = "2"
dirs = "6"
base64 = "0.22"
thiserror = "2"

# For tracker list timestamps
chrono = { version = "0.4", features = ["serde"] }

getrandom = "0.2"
dunce = "1"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
